# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "bureau-artifact-service_lib",
    srcs = [
        "doc.go",
        "handler.go",
        "main.go",
        "sync.go",
    ],
    importpath = "github.com/bureau-foundation/bureau/cmd/bureau-artifact-service",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/artifactstore",
        "//lib/artifactstore/fuse",
        "//lib/clock",
        "//lib/codec",
        "//lib/netutil",
        "//lib/process",
        "//lib/ref",
        "//lib/schema",
        "//lib/schema/artifact",
        "//lib/secret",
        "//lib/service",
        "//lib/servicetoken",
        "//lib/version",
        "//messaging",
    ],
)

go_binary(
    name = "bureau-artifact-service",
    embed = [":bureau-artifact-service_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bureau-artifact-service_test",
    srcs = ["handler_test.go"],
    embed = [":bureau-artifact-service_lib"],
    deps = [
        "//lib/artifactstore",
        "//lib/clock",
        "//lib/ref",
        "//lib/schema/artifact",
        "//lib/service",
        "//lib/servicetoken",
        "//lib/testutil",
    ],
)
