# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "bureau-daemon_lib",
    srcs = [
        "bureau_version.go",
        "doc.go",
        "exec.go",
        "health.go",
        "layout.go",
        "main.go",
        "metrics.go",
        "observe.go",
        "observe_auth.go",
        "prefetch.go",
        "reconcile.go",
        "services.go",
        "sync.go",
        "template.go",
        "token_verifier.go",
        "transport.go",
    ],
    importpath = "github.com/bureau-foundation/bureau/cmd/bureau-daemon",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/binhash",
        "//lib/principal",
        "//lib/schema",
        "//lib/template",
        "//lib/version",
        "//lib/watchdog",
        "//messaging",
        "//observe",
        "//transport",
    ],
)

go_binary(
    name = "bureau-daemon",
    embed = [":bureau-daemon_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bureau-daemon_test",
    srcs = [
        "bureau_version_test.go",
        "composition_test.go",
        "exec_test.go",
        "health_test.go",
        "layout_watcher_test.go",
        "machine_layout_test.go",
        "main_test.go",
        "metrics_test.go",
        "observe_auth_test.go",
        "observe_test.go",
        "prefetch_test.go",
        "query_layout_test.go",
        "reconcile_test.go",
        "services_test.go",
        "start_condition_test.go",
        "sync_test.go",
        "template_test.go",
        "token_verifier_test.go",
        "transport_test.go",
    ],
    data = [
        "//cmd/bureau-daemon/testdata/mock_relay",
        "//cmd/bureau-launcher",
        "//cmd/bureau-proxy",
    ],
    embed = [":bureau-daemon_lib"],
    env = {
        "BUREAU_LAUNCHER_BINARY": "$(rlocationpath //cmd/bureau-launcher:bureau-launcher)",
        "BUREAU_MOCK_RELAY_BINARY": "$(rlocationpath //cmd/bureau-daemon/testdata/mock_relay)",
        "BUREAU_PROXY_BINARY": "$(rlocationpath //cmd/bureau-proxy:bureau-proxy)",
    },
    deps = [
        "//lib/binhash",
        "//lib/principal",
        "//lib/schema",
        "//lib/sealed",
        "//lib/testutil",
        "//lib/watchdog",
        "//messaging",
        "//observe",
    ],
)
