# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "bureau-daemon_lib",
    srcs = [
        "admin.go",
        "bureau_version.go",
        "command.go",
        "doc.go",
        "exec.go",
        "health.go",
        "layout.go",
        "main.go",
        "metrics.go",
        "observe.go",
        "observe_auth.go",
        "pipeline.go",
        "prefetch.go",
        "reconcile.go",
        "services.go",
        "sync.go",
        "template.go",
        "token_blacklist.go",
        "token_refresh.go",
        "token_verifier.go",
        "transport.go",
        "worktree.go",
    ],
    importpath = "github.com/bureau-foundation/bureau/cmd/bureau-daemon",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/artifact",
        "//lib/authorization",
        "//lib/binhash",
        "//lib/clock",
        "//lib/codec",
        "//lib/git",
        "//lib/hwinfo",
        "//lib/hwinfo/amdgpu",
        "//lib/hwinfo/nvidia",
        "//lib/ipc",
        "//lib/netutil",
        "//lib/nix",
        "//lib/principal",
        "//lib/schema",
        "//lib/sealed",
        "//lib/service",
        "//lib/servicetoken",
        "//lib/template",
        "//lib/tmux",
        "//lib/version",
        "//lib/watchdog",
        "//messaging",
        "//observe",
        "//transport",
    ],
)

go_binary(
    name = "bureau-daemon",
    embed = [":bureau-daemon_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bureau-daemon_test",
    srcs = [
        "admin_test.go",
        "bureau_version_test.go",
        "command_test.go",
        "composition_test.go",
        "daemon_test.go",
        "exec_test.go",
        "health_test.go",
        "layout_watcher_test.go",
        "machine_layout_test.go",
        "main_test.go",
        "metrics_test.go",
        "observe_auth_test.go",
        "observe_test.go",
        "pipeline_test.go",
        "prefetch_test.go",
        "query_layout_test.go",
        "reconcile_test.go",
        "service_resolution_test.go",
        "services_test.go",
        "start_condition_test.go",
        "sync_test.go",
        "template_test.go",
        "token_blacklist_test.go",
        "token_refresh_test.go",
        "token_verifier_test.go",
        "transport_test.go",
    ],
    data = [
        "//cmd/bureau-daemon/testdata/mock_relay",
        "//cmd/bureau-launcher",
        "//cmd/bureau-proxy",
    ],
    embed = [":bureau-daemon_lib"],
    env = {
        "BUREAU_LAUNCHER_BINARY": "$(rlocationpath //cmd/bureau-launcher:bureau-launcher)",
        "BUREAU_MOCK_RELAY_BINARY": "$(rlocationpath //cmd/bureau-daemon/testdata/mock_relay)",
        "BUREAU_PROXY_BINARY": "$(rlocationpath //cmd/bureau-proxy:bureau-proxy)",
    },
    deps = [
        "//lib/authorization",
        "//lib/binhash",
        "//lib/clock",
        "//lib/codec",
        "//lib/ipc",
        "//lib/nix",
        "//lib/principal",
        "//lib/schema",
        "//lib/sealed",
        "//lib/service",
        "//lib/servicetoken",
        "//lib/testutil",
        "//lib/tmux",
        "//lib/watchdog",
        "//messaging",
        "//observe",
    ],
)
