# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "bureau-fleet-controller_lib",
    srcs = [
        "doc.go",
        "execute.go",
        "health.go",
        "main.go",
        "placement.go",
        "socket.go",
        "sync.go",
    ],
    importpath = "github.com/bureau-foundation/bureau/cmd/bureau-fleet-controller",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/clock",
        "//lib/codec",
        "//lib/ref",
        "//lib/schema",
        "//lib/schema/fleet",
        "//lib/service",
        "//lib/servicetoken",
        "//lib/version",
        "//messaging",
    ],
)

go_binary(
    name = "bureau-fleet-controller",
    embed = [":bureau-fleet-controller_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bureau-fleet-controller_test",
    srcs = [
        "execute_test.go",
        "health_test.go",
        "placement_test.go",
        "socket_test.go",
        "sync_test.go",
    ],
    embed = [":bureau-fleet-controller_lib"],
    deps = [
        "//lib/clock",
        "//lib/ref",
        "//lib/schema",
        "//lib/schema/fleet",
        "//lib/service",
        "//lib/servicetoken",
        "//messaging",
    ],
)
