# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "bureau-launcher_lib",
    srcs = [
        "doc.go",
        "exec.go",
        "main.go",
        "sandbox.go",
    ],
    importpath = "github.com/bureau-foundation/bureau/cmd/bureau-launcher",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/binhash",
        "//lib/bootstrap",
        "//lib/codec",
        "//lib/principal",
        "//lib/schema",
        "//lib/sealed",
        "//lib/secret",
        "//lib/tmux",
        "//lib/version",
        "//lib/watchdog",
        "//messaging",
        "//sandbox",
    ],
)

go_binary(
    name = "bureau-launcher",
    embed = [":bureau-launcher_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bureau-launcher_test",
    srcs = [
        "exec_test.go",
        "main_test.go",
        "sandbox_test.go",
    ],
    data = ["//cmd/bureau-proxy"],
    embed = [":bureau-launcher_lib"],
    env = {"BUREAU_PROXY_BINARY": "$(rlocationpath //cmd/bureau-proxy:bureau-proxy)"},
    deps = [
        "//lib/codec",
        "//lib/principal",
        "//lib/schema",
        "//lib/sealed",
        "//lib/secret",
        "//lib/testutil",
        "//lib/tmux",
        "//lib/watchdog",
        "//sandbox",
    ],
)
