# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "bureau-pipeline-executor_lib",
    srcs = [
        "doc.go",
        "execute.go",
        "log.go",
        "main.go",
        "result.go",
        "ticket.go",
    ],
    importpath = "github.com/bureau-foundation/bureau/cmd/bureau-pipeline-executor",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/artifactstore",
        "//lib/clock",
        "//lib/pipelinedef",
        "//lib/process",
        "//lib/proxyclient",
        "//lib/ref",
        "//lib/schema",
        "//lib/schema/pipeline",
        "//lib/schema/ticket",
        "//lib/service",
        "//lib/version",
        "//messaging",
    ],
)

go_binary(
    name = "bureau-pipeline-executor",
    embed = [":bureau-pipeline-executor_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bureau-pipeline-executor_test",
    srcs = [
        "execute_test.go",
        "main_test.go",
    ],
    embed = [":bureau-pipeline-executor_lib"],
    deps = [
        "//lib/clock",
        "//lib/codec",
        "//lib/schema/pipeline",
        "//lib/schema/ticket",
        "//lib/service",
    ],
)
