# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bureau-proxy-call_lib",
    srcs = [
        "doc.go",
        "main.go",
    ],
    importpath = "github.com/bureau-foundation/bureau/cmd/bureau-proxy-call",
    visibility = ["//visibility:private"],
    deps = ["//lib/version"],
)

go_binary(
    name = "bureau-proxy-call",
    embed = [":bureau-proxy-call_lib"],
    visibility = ["//visibility:public"],
)
