# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bureau-proxy_lib",
    srcs = [
        "doc.go",
        "main.go",
    ],
    importpath = "github.com/bureau-foundation/bureau/cmd/bureau-proxy",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/process",
        "//lib/ref",
        "//lib/secret",
        "//lib/version",
        "//messaging",
        "//proxy",
    ],
)

go_binary(
    name = "bureau-proxy",
    embed = [":bureau-proxy_lib"],
    visibility = ["//visibility:public"],
)
