# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bureau-sandbox_lib",
    srcs = ["main.go"],
    importpath = "github.com/bureau-foundation/bureau/cmd/bureau-sandbox",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/config",
        "//lib/version",
        "//sandbox",
    ],
)

go_binary(
    name = "bureau-sandbox",
    embed = [":bureau-sandbox_lib"],
    visibility = ["//visibility:public"],
)
