# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bureau-telemetry-mock_lib",
    srcs = ["main.go"],
    importpath = "github.com/bureau-foundation/bureau/cmd/bureau-telemetry-mock",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/codec",
        "//lib/netutil",
        "//lib/process",
        "//lib/schema/telemetry",
        "//lib/service",
        "//lib/servicetoken",
        "//lib/version",
    ],
)

go_binary(
    name = "bureau-telemetry-mock",
    embed = [":bureau-telemetry-mock_lib"],
    visibility = ["//visibility:public"],
)
